welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:5: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
		case (a+b) == 10 => true
                           ^